--- a/Wrangling.ipynb
+++ b/Wrangling.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "# Libraries\r\n",
     "\r\n",
@@ -1161,12 +1161,13 @@
     "        job (string) - the specific job title if applicable, else '\\N' -> Perdu lors du pivot\r\n",
     "        characters (string) - the name of the character played if applicable, else '\\N' -> Perdu lors du pivot\r\n",
     "\r\n",
-    "'title_principals' contient des données sur les principaux principaux acteurs du film.\r\n",
-    "On s'attendra à ce que des acteurs ou réalisateurs revenant souvent (on utilisera le nombre de votes comme variable proxy) tendent à faire monter le rating d'un film, soit : \r\n",
-    "* Par expérience, en jouant dans beaucoup de film\r\n",
-    "* Parce qu'ils sont connus du public\r\n",
+    "'title_principals' has data about the main cast of the movie. Two important variables are created here for each movie: the sum of all the votes of the movies the crew has played in (e.g. Alfred has played in movie 1 & movie 2, totalling 1000 votes, and Bob has played in movie 45 and 98n totalling 40000 votes. The sumVotes variable here will be 41000), and the average rating (weighted on the number of votes) of all the films the crew has participated in.\r\n",
     "\r\n",
-    "On pourra aussi utiliser le weighted average rating des films dans lesquels un acteur a joué comme proxy pour mesurer s'il est apprécié ou non du public (ou au moins s'il est associé à des \"bons\" films)"
+    "We may expect that actors/directors who have played in a lot of highly voted movies may have a positive effect on the rating of a movie, either because:\r\n",
+    "* They are experienced\r\n",
+    "* They are well-known among the public \r\n",
+    "\r\n",
+    "The average rating of the films the crew has participated in could tell us if the cast is well-liked or not (at the very least, we know if they are associated with good or bad movies)"
    ],
    "metadata": {}
   },
@@ -2649,6 +2650,7 @@
     "    # Get descriptions of the plot for each film\r\n",
     "    .merge(\r\n",
     "        right=pd.concat(\r\n",
+    "            # This is a list comprehension to get all the different files with the plot descriptions\r\n",
     "            [\r\n",
     "                pd.read_csv(os.path.join(\"Data\", \"Modified\", file))\r\n",
     "                .drop_duplicates()\r\n",
@@ -2660,7 +2662,7 @@
     "            ],\r\n",
     "            axis=0,\r\n",
     "        ).assign(\r\n",
-    "            # Cleaning language variable (deleting a lot of \"None\")\r\n",
+    "            # Cleaning language variable (there are a lot \"None\" values, I'm deleting them)\r\n",
     "            language=lambda x: x[\"language\"]\r\n",
     "            .str.replace(\"None, |, None\", \"\", regex=True)\r\n",
     "            .replace(\"None\", np.NaN)\r\n",
@@ -2668,13 +2670,13 @@
     "        on=\"tconst\",\r\n",
     "        how=\"left\",\r\n",
     "    )\r\n",
-    "    # Get names of all the film crew\r\n",
+    "    # Merge with names of all the film crew\r\n",
     "    .merge(\r\n",
     "        pd.read_feather(os.path.join(\"Data\", \"Modified\", \"crew.names.feather\")),\r\n",
     "        on=\"tconst\",\r\n",
     "        how=\"left\",\r\n",
     "    )\r\n",
-    "    # Some new variables:\r\n",
+    "    # Some new variables are created here:\r\n",
     "    # Names = Vector with all names (actors + directors + others)\r\n",
     "    # awards_nom_or_won = binary. 1 if the field was nominated for an award, or if it has won one.\r\n",
     "    # awards_won = binary. 1 if the film has won an award\r\n",
@@ -2705,11 +2707,13 @@
     "    ).drop(columns=[\"Unnamed: 0\"])\r\n",
     ")\r\n",
     "\r\n",
+    "# Some diagnostics. Length of the dataframe\r\n",
     "print(\"Df length full:\", len(df))\r\n",
     "print(\r\n",
     "    \"Df length with descriptions:\",\r\n",
     "    len(df.dropna(axis=0, how=\"any\", subset=[\"plot\"])),\r\n",
     ")\r\n",
+    "# Length of the dataframe (without missing plot descriptions)\r\n",
     "print(\r\n",
     "    \"Films with descriptions:\",\r\n",
     "    round((len(df.dropna(axis=0, how=\"any\", subset=[\"plot\"])) / len(df)) * 100, 2),\r\n",
