--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -664,7 +664,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Matériel & Méthodes"
+    "# Methodology"
    ],
    "metadata": {}
   },
