--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -14347,9 +14347,7 @@
     "## LDA\r\n",
     "---\r\n",
     "\r\n",
-    "Yet again, I decided to change things up. I have kept a lot less words (~2000). I had to slightly trim the most common words (this includes words like \"life\" and family), as they made the interpretation of the latent dimensions quite hard. All words that appeared in more than 1 in 10 documents were not taken into account (we only lost around 20-30 words). Very rare words (that appear in less than 0.3% of documents) were also discarded.\r\n",
-    "\r\n",
-    "I still kept descriptions with a minimum number of words (10, here). I tried with a higher threshold (50 words), but results were less convincing."
+    "I'm doing yet again the same thing as before, but with LDA. This time, I decided to keep all words however (excepts a few words in other languages or that I just didn't really find useful)."
    ],
    "metadata": {}
   },
@@ -14371,7 +14369,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Setup"
+    "#### Setup\r\n",
+    "\r\n",
+    "I'll loop through a range of number of topics to find the optimal set with a [coherence score](https://radimrehurek.com/gensim/models/coherencemodel.html)."
    ],
    "metadata": {}
   },
@@ -14384,7 +14384,7 @@
     "lda_ntopics = [5, 6, 7, 8, 9, 10, 11, 12, 15, 20, 30, 50]\r\n",
     "\r\n",
     "df_desc_filtered = df_desc.assign(\r\n",
-    "    # I'm going to delete even more words. Vers that I don't find very informative. And words from other languages\r\n",
+    "    # I'm going to delete even more words. Verbs that I don't find very informative. And words from other languages\r\n",
     "    plot=df_desc[\"plot\"].str.replace(\r\n",
     "        r\"\\b(?:{})\\b\".format(\r\n",
     "            \"|\".join([\"get\", \"become\", \"go\", \"look\", \"like\", \"see\", \"life\", \"one\", \"two\", \"three\", \"first\", \"second\", \"third\",\r\n",
@@ -14437,7 +14437,7 @@
     "\r\n",
     "\r\n",
     "\r\n",
-    "I looped through multiple numbers of topics, and kept the coherence value for each. Coherence values are based on this paper (which I haven't read): http://svn.aksw.org/papers/2015/WSDM_Topic_Evaluation/public.pdf. There are also other parameters I should change, but that would take a bit too long.\r\n",
+    "I looped through multiple numbers of topics, and kept the coherence value for each. Coherence values are based on this paper (which I haven't read): [http://svn.aksw.org/papers/2015/WSDM_Topic_Evaluation/public.pdf](http://svn.aksw.org/papers/2015/WSDM_Topic_Evaluation/public.pdf). There are also [other parameters I should change](https://towardsdatascience.com/evaluate-topic-model-in-python-latent-dirichlet-allocation-lda-7d57484bb5d0), but that would take too long.\r\n",
     "\r\n",
     "11 topics seem to be marginally better. Hopefully, the randomness of LDA won't change this too much."
    ],
@@ -14626,7 +14626,7 @@
    "cell_type": "code",
    "execution_count": 53,
    "source": [
-    "# The optimal number of topics is automatically set\r\n",
+    "# The optimal number of topics is automatically set using the table above, no need to change anything\r\n",
     "lda_ntopics_val = pd.DataFrame(coherence_results).sort_values(by=\"c_v\", ascending=False).iloc[0,0]\r\n",
     "\r\n",
     "lda = gensim.models.LdaMulticore(\r\n",
@@ -14638,6 +14638,13 @@
     ")"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "I'll do the analysis of the topics a bit further down"
+   ],
    "metadata": {}
   },
   {
@@ -14706,6 +14713,14 @@
     "import pyLDAvis.gensim_models as gensimvis"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "[Overview of what pyLDAvis does](https://nbviewer.jupyter.org/github/bmabey/pyLDAvis/blob/master/notebooks/pyLDAvis_overview.ipynb)\r\n",
+    "\r\n"
+   ],
    "metadata": {}
   },
   {
@@ -14795,7 +14810,7 @@
     "\r\n",
     "It remains to be seen how useful these latent dimensions prove to be in other applications, such as regression or classification. This will probably be the correct way to assess which of these clusters/topics is the \"best\". I wanted to do some analyses on the awards variable, and see which between KMeans, LSA and LDA yield the best clusters/topics to predict whether a film will win an award or not (along with other covariates). \r\n",
     "\r\n",
-    "A lot more cleaning could have been done on the descriptions of the films. There are still plots in other languages, which should be deleted ([this package](https://pypi.org/project/langdetect/) could have help)."
+    "A lot more cleaning could have been done on the descriptions of the films. There are still plots in other languages, which should be deleted ([this package](https://pypi.org/project/langdetect/) could have help). Also, the embeddings can be done a lot better (using bigrams and/or trigrams, for example)"
    ],
    "metadata": {}
   },
