Late night text update

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "source": [
     "plotly_renderer = \"svg\"\r\n",
     "# plotly_renderer = \"notebook\""
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "source": [
     "###########################################\r\n",
     "# Import data\r\n",
@@ -645,7 +645,7 @@
     "---\r\n",
     "## Facts and figures\r\n",
     "\r\n",
-    "The number of new films has increased steadily over the years, since the early 20th century. The early 2000s saw an unprecedented increase in the number of new movies per year, peaking at 18,000 new films in 2017 alone. This is, unsurprisingly, a huge market for movie productions companies (Universal, Warner Bros...) and, recently, streaming media services (Netflix, Hulu, Amazon Prime Video). Movies (and other video content, in general) are, also unsurprisingly, very heterogeneous in their content: they differ in plots, tropes and artistic visions. They have nevertheless classifiable: some may tend to have similar [overarching themes](https://en.wikipedia.org/wiki/List_of_genres) and recurring [plot conventions and tropes](https://tvtropes.org/) (e.g. kids splitting up in horror movies), or simply similar actors or directors.\r\n",
+    "The number of new films has increased steadily over the years since the early 20th century. The early 2000s saw an unprecedented increase in the number of new movies per year, peaking at 18,000 new films in 2017 alone. This is, unsurprisingly, a huge market for movie productions companies (Universal, Warner Bros...) and, recently, streaming media services (Netflix, Hulu, Amazon Prime Video). Movies (and other video content, in general) are, also unsurprisingly, very heterogeneous in their content: they differ in plots, tropes and artistic visions. They have nevertheless classifiable: some may tend to have similar [overarching themes](https://en.wikipedia.org/wiki/List_of_genres) and recurring [plot conventions and tropes](https://tvtropes.org/) (e.g. kids splitting up in horror movies), or simply similar actors or directors.\r\n",
     "\r\n",
     "![Graph films](./img/figPPTX-Copy.svg)\r\n",
     "\r\n",
@@ -661,7 +661,7 @@
     "* Clustering movie descriptions\r\n",
     "* Creating a recommendation system by finding similar movies \r\n",
     "\r\n",
-    "## Objectives and results.\r\n",
+    "## Objectives and results\r\n",
     "\r\n",
     "Here, I mainly focused on data exploration, visualisation, and on finding clusters of movie plots using KMeans, LSA and LDA. The goal was to, at the very least, find some common genres and themes using the plot description of each fillm. Each method managed to find a few very common themes (e.g. families, crimes, police, school, world wars, historical content, game shows), but the sheer variety of plot descriptions and possible themes in movies is difficult to reduce to just a dozen dimensions."
    ],
@@ -7295,8 +7295,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "from IPython.display import HTML\r\n",
-    "HTML(filename=\"./Regressions.html\")"
+    "# from IPython.display import HTML\r\n",
+    "# HTML(filename=\"./Regressions.html\")"
    ],
    "outputs": [],
    "metadata": {}
@@ -12475,7 +12475,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "I want to visualize a few of these latent dimensions."
+    "I want to visualize a few of these latent dimensions. Luckily, the \"best\" number of clusters we can have here is 3, so let's do a 3D plot."
    ],
    "metadata": {}
   },
@@ -12518,11 +12518,13 @@
   {
    "cell_type": "markdown",
    "source": [
+    "Note: I only show films with at least 500,000 votes here\r\n",
+    "\r\n",
     "Interestingly, the dimensions used here (2, 3, 8) are quite easy to interpret. I named them, respectively: Family Drama, Crime, and War/Historical.\r\n",
     "\r\n",
     "A few films that rank high on War/Historical: Apocalypse Now, 300, Inglorious Basterds, and... Shrek. Probably because there are the words \"king\" and \"princess\" in the plot; other words that are common in this dimension are \"german\", \"war\", \"army\", \"soldier\", \"fight\" (hence the name). War/Historical films seem to also rate high on Crime (except Shrek), surely because of the words like \"kill\", \"agents\", \"teams\"...\r\n",
     "\r\n",
-    "This clustering seems useless to me. It just looks a bit nice. If I had to do this myself, I would have a specific cluster for observations at the center, since they don't rank high on any particular axis (e.g. Mad Max Fury Road, Donnie Darko, Star Trek, Star Wars, or those Marvel movies)"
+    "This clustering seems useless to me. It just looks nice. If I had to do this myself, I would have a specific cluster for observations at the center, since they don't rank high on any particular axis (e.g. Mad Max Fury Road, Donnie Darko, Star Trek, Star Wars, or those Marvel movies). But I'm not a well-known, testable clustering method, so what do I know."
    ],
    "metadata": {}
   },
@@ -12535,7 +12537,9 @@
     "\r\n",
     "px.scatter_3d(\r\n",
     "    data_frame=reduced_tfidf.assign(\r\n",
+    "        # Changing the type of the clusters variables to category will tell plotly to use discrete colours instead of continuous\r\n",
     "        clusters=reduced_tfidf[\"clusters\"].astype(\"category\"),\r\n",
+    "        # Just a small trick so the plot descriptions can fit on the vignette when hovering \r\n",
     "        plot=reduced_tfidf[\"plot\"].str.wrap(50).str.replace(\"\\n\", \"<br>\")\r\n",
     "    ).rename(columns={\r\n",
     "        \"LatentFactor2\": \"LF2 Family Drama\",\r\n",
@@ -14708,7 +14712,7 @@
    "cell_type": "code",
    "execution_count": 42,
    "source": [
-    "# It's poor practice, but I left that at the end. Cherry on the top. That package looks rad.\r\n",
+    "# It's poor practice, but I left that at the end. It's like the cherry on the top. That package looks rad.\r\n",
     "import pyLDAvis\r\n",
     "import pyLDAvis.gensim_models as gensimvis"
    ],
@@ -14718,8 +14722,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "[Overview of what pyLDAvis does](https://nbviewer.jupyter.org/github/bmabey/pyLDAvis/blob/master/notebooks/pyLDAvis_overview.ipynb)\r\n",
-    "\r\n"
+    "[Overview of what pyLDAvis does](https://nbviewer.jupyter.org/github/bmabey/pyLDAvis/blob/master/notebooks/pyLDAvis_overview.ipynb) (funnily enough, the example is about movie reviews)\r\n",
+    "\r\n",
+    "On the left is the graphical representation of the first two dimensions from a PCA on the topic-words. The first dimension (x axis) seems to represent family, daily life ? The second axis is quite unclear, in my opinion. We can easily see which topics are very similar to one another (clearly 1 and 4, here, which are about family). We have a topic about school (9), agme shows/interviews/musics shows (6), monsters/surnatural (10), movies about working adults who find love? (2), crimes (7), 5 seems about war, and 3 seems a bit unclear (adventure? exploration?). \r\n",
+    "\r\n",
+    "What is interesting is the relevance parameter. Decreasing it gives a higher weight to words that are more rare, but that occur only in that topic. A value of 0.6 is suggested. Here, a $\\lambda$ of 0.6 does not change the interpretation of the topics, though we can see that 11 is mostly characters names, places, and dates. Typically, this is something that I think should be deleted: characters names and specific cities are not very important to understand the plot of the films."
    ],
    "metadata": {}
   },
@@ -14804,7 +14811,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Choosing between these different clustering methods will prove rather difficult. Each has managed to capture main topics from the plot descriptions. Overall, the latent dimensions found by KMeans, LSA and LDA are rather similar.\r\n",
+    "Choosing between these different clustering methods will prove rather difficult. Each has managed to capture main topics from the plot descriptions. Overall, the latent dimensions found by KMeans, LSA and LDA are rather similar. As a reminder: the usual indicators for KMeans were very bad (no elbow on the inertia plot, and the silhouette values were very small), and the best coherence score for LDA we have found was for 11 topics (score: 0.48). I am not aware of such indicators for the latent dimensions obtained with LSA.\r\n",
     "\r\n",
     "We may also ask ourselves if those topics are really relevant, considering we already have information about the genres of films. While do capture latent dimensions that fall clearly within some genres (namely, crime movies and war movies), we also get some nuance that we don't find in the genres variables: content about school, teen movies, vampires, and (way too much) information about relationships, family, and others. Plus, with LDA and LSA, we get quantitative measures, instead of categorical variables.\r\n",
     "\r\n",
