Late night text updates

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -7,7 +7,9 @@
     "\r\n",
     "Data can be created using `Wrangling.ipynb` or by putting `imdb.csv` (and `lemmatized_descriptions.csv`, if needed) in `./Data/Final/`\r\n",
     "\r\n",
-    "Csv files can be downloaded [here](https://drive.google.com/drive/folders/1bZeqhJixOjkc1wpm1zmz09-tyYrpTM3S?usp=sharing)."
+    "Csv files can be downloaded [here](https://drive.google.com/drive/folders/1bZeqhJixOjkc1wpm1zmz09-tyYrpTM3S?usp=sharing).\r\n",
+    "\r\n",
+    "Github repo: [https://github.com/Dscronias/yet-another-imdb-project](https://github.com/Dscronias/yet-another-imdb-project)"
    ],
    "metadata": {}
   },
