--- a/Wrangling.ipynb
+++ b/Wrangling.ipynb
@@ -10,6 +10,15 @@
   {
    "cell_type": "markdown",
    "source": [
+    "See `Analysis.ipynb` for an overview of what this repo is about.\r\n",
+    "\r\n",
+    "Github repo: [https://github.com/Dscronias/yet-another-imdb-project](https://github.com/Dscronias/yet-another-imdb-project)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Setup"
    ],
    "metadata": {}
