--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -627,7 +627,7 @@
     "* `rated`: MPAA ratingss\r\n",
     "* `awards`: indicates the number of wins and/or nominations\r\n",
     "* `awards_nom_or_won`: (binary) indicates if the film has won an award or has been nominated for one\r\n",
-    "* `awwards_won`: (binary) indicates if the film has won an award\r\n",
+    "* `awards_won`: (binary) indicates if the film has won an award\r\n",
     "* `country`: [place or places where the production companies for that title are based, and therefore where the financing originated](https://help.imdb.com/article/contribution/titles/countries/GTSW4DN8H8LKCXER#)\r\n",
     "* `language`: original language of the movie\r\n",
     "* `plot`: description of the plot\r\n",
@@ -647,7 +647,7 @@
     "---\r\n",
     "## Facts and figures\r\n",
     "\r\n",
-    "The number of new films has increased steadily over the years since the early 20th century. The early 2000s saw an unprecedented increase in the number of new movies per year, peaking at 18,000 new films in 2017 alone. This is, unsurprisingly, a huge market for movie productions companies (Universal, Warner Bros...) and, recently, streaming media services (Netflix, Hulu, Amazon Prime Video). Movies (and other video content, in general) are, also unsurprisingly, very heterogeneous in their content: they differ in plots, tropes and artistic visions. They have nevertheless classifiable: some may tend to have similar [overarching themes](https://en.wikipedia.org/wiki/List_of_genres) and recurring [plot conventions and tropes](https://tvtropes.org/) (e.g. kids splitting up in horror movies), or simply similar actors or directors.\r\n",
+    "The number of new films has increased steadily over the years since the early 20th century. The early 2000s saw an unprecedented increase in the number of new movies per year, peaking at 18,000 new films in 2017 alone. This is, unsurprisingly, a huge market for movie productions companies (Universal, Warner Bros...) and, recently, streaming media services (Netflix, Hulu, Amazon Prime Video). Movies (and other video content, in general) are, also unsurprisingly, very heterogeneous in their content: they differ in plots, tropes and artistic visions. They are nevertheless classifiable: some may tend to have similar [overarching themes](https://en.wikipedia.org/wiki/List_of_genres) and recurring [plot conventions and tropes](https://tvtropes.org/) (e.g. kids splitting up in horror movies), or simply similar actors or directors.\r\n",
     "\r\n",
     "![Graph films](./img/figPPTX-Copy.svg)\r\n",
     "\r\n",
@@ -672,21 +672,29 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Methodology"
+    "---\r\n",
+    "# Methodology\r\n",
+    "---"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "The database is presented in detail just above. In a nutshell: "
+    "The database is presented in detail just above. In a nutshell, there are 427K productions (movies, TV series, mini-series, videos, TV movies), and around 20-30 variables, including the rating of the film, the number of votes, its genre, if it has won awards, its box office, plot, actors/directors/other crew members, and length, among others. \r\n",
+    "\r\n",
+    "The first part of the notebook is purely focused on data visualisation of the various quantitative and qualitative variables in the dataset, mostly to see associations between movie ratings and other covariates (this was the initial focus).\r\n",
+    "\r\n",
+    "The second part is about NLP, clustering and topic modeling on the descriptions of the plot of the movies. This dataset is a bit smaller (~300K movies, it's still not bad at all). This text data was cleaned (stop words were deleted, words were lemmatized) and embedded with Tf-idf (for KMeans and LSA) and CountVectorizer (for LDA). For each method (except LSA), the optimal number of clusters (for Kmeans) and topics (for LDA) was determined using rather standard criterion: inertia and silhouette plots for Kmeans, and a coherence score for LDA."
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "# Results"
+    "---\r\n",
+    "# Results\r\n",
+    "---"
    ],
    "metadata": {}
   },
@@ -1588,6 +1596,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Note: in the graph below, multiple countries can produce a film. The US produces a lot of films, so them being first isn't surprising. But we should remain skeptical: in this dataset, we just have a part of the full IMDb dataset, we've kept the movies that were rated at least once. I wouldn't be surprised if the main userbase of the website was located in the US, and mainly rated Western movies. I bet the percentage for some movies (e.g. India) is actually a lot higher."
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 149,
    "source": [
@@ -1917,7 +1932,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Bivariate"
+    "---\r\n",
+    "## Bivariate\r\n",
+    "---"
    ],
    "metadata": {}
   },
@@ -1932,6 +1949,13 @@
    "cell_type": "markdown",
    "source": [
     "#### Year"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "It seems the average rating has kept decreasing over the years since the 70s-80s. Either cinema was truly better before, or people nowadays don't before watching bad movies from this era and just rate the good ones, or people glorify the 70s-80s and are too harsh about the cinema of today. Though since there are a lot more movies since the early 2000s, it's likely there are more poorly rated cash grabs nowadays."
    ],
    "metadata": {}
   },
@@ -3730,6 +3754,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Not very interesting. It follows the same pattern as the evolution of the number of movies per year."
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "source": [
@@ -4876,6 +4907,13 @@
      },
      "metadata": {}
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Mostly dramas and comedies. Not very interesting."
    ],
    "metadata": {}
   },
@@ -6164,6 +6202,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "That distribution/shape is quite interesting. I think it does tend to say that movies with a high number of votes are more likely to have an higher average rating."
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "source": [
@@ -6424,6 +6469,13 @@
    "cell_type": "markdown",
    "source": [
     "### Categorical"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "I have nothing really interesting to say here. Westerns tend to have the highest ratings, on average. Why not."
    ],
    "metadata": {}
   },
@@ -6718,6 +6770,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "As we have seen before: movies with a lot of votes tend to be rated better. Maybe people who watch \"underground\" movies are more severe? Or, now that I think about it, maybe most users on IMDb just create an account to try the website, rate a few big movies that they have liked (I think it's unlikely you will spend your time rating as many good movies as bad movie, implying you even remember about them), and never use it again. We can't know."
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 77,
    "source": [
@@ -6888,6 +6947,13 @@
    "cell_type": "markdown",
    "source": [
     "#### Adult films"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Adult movies have worse ratings. Hardly surprising."
    ],
    "metadata": {}
   },
@@ -7311,69 +7377,9 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 80,
-   "source": [
-    "df.columns"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Index(['tconst', 'titleType', 'primaryTitle', 'originalTitle', 'isAdult',\n",
-       "       'startYear', 'runtimeMinutes', 'genres', 'changed_title', 'main_genre',\n",
-       "       'averageRating', 'numVotes', 'n_titles', 'sumVotes_Actors',\n",
-       "       'sumVotes_Director', 'sumVotes_Others', 'avgRating_weighted_Actors',\n",
-       "       'avgRating_weighted_Director', 'avgRating_weighted_Others', 'maxSeason',\n",
-       "       'crew_size_indice', 'sumVotes_crew', 'avgRating_crew', 'mainstream',\n",
-       "       'log_numVotes', 'rated', 'awards', 'country', 'language', 'plot',\n",
-       "       'boxoffice', 'production', 'names_Actors', 'names_Director',\n",
-       "       'names_Others', 'Names', 'awards_nom_or_won', 'awards_won',\n",
-       "       'all_texts'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 80
-    }
-   ],
-   "metadata": {}
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "Some interesting things: biographies are the most likely genre to have an award (3 in ten). Followed close by by dramas."
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "source": [
-    "df.columns"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Index(['tconst', 'titleType', 'primaryTitle', 'originalTitle', 'isAdult',\n",
-       "       'startYear', 'runtimeMinutes', 'genres', 'changed_title', 'main_genre',\n",
-       "       'averageRating', 'numVotes', 'n_titles', 'sumVotes_Actors',\n",
-       "       'sumVotes_Director', 'sumVotes_Others', 'avgRating_weighted_Actors',\n",
-       "       'avgRating_weighted_Director', 'avgRating_weighted_Others', 'maxSeason',\n",
-       "       'crew_size_indice', 'sumVotes_crew', 'avgRating_crew', 'mainstream',\n",
-       "       'log_numVotes', 'rated', 'awards', 'country', 'language', 'plot',\n",
-       "       'boxoffice', 'production', 'names_Actors', 'names_Director',\n",
-       "       'names_Others', 'Names', 'awards_nom_or_won', 'awards_won',\n",
-       "       'all_texts'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 84
-    }
    ],
    "metadata": {}
   },
