--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -681,7 +681,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The database is presented in detail just above. In a nutshell, there are 427K productions (movies, TV series, mini-series, videos, TV movies), and around 20-30 variables, including the rating of the film, the number of votes, its genre, if it has won awards, its box office, plot, actors/directors/other crew members, and length, among others. \r\n",
+    "The database is presented in detail just above. In a nutshell, there are 427K productions (movies, TV series, mini-series, videos, TV movies), and around 20-30 variables, including the rating of the film, the number of votes, its genre, if it has won awards, its box office, plot, actors/directors/other crew members, and length, among others. The IMDb datasets is available [here](https://www.imdb.com/interfaces/). Multiple variables (country, plot, language, awards...) do not come from IMDb, but from [OMDb](https://www.omdbapi.com/).\r\n",
     "\r\n",
     "The first part of the notebook is purely focused on data visualisation of the various quantitative and qualitative variables in the dataset, mostly to see associations between movie ratings and other covariates (this was the initial focus).\r\n",
     "\r\n",
